--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="login-container">
+
+  <div class="login-inner-container">
+    <mat-card class="login-card">
+      <mat-card-header>
+        <!--<div style="align-items: center; padding-right: 50px">-->
+
+        <!--  <img class="header-image" src="assets/google.png">-->
+        <!--</div>-->
+        <!--<mat-card-title>Shiba Inu</mat-card-title>-->
+        <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+      </mat-card-header>
+      <mat-card-content>
+
+      </mat-card-content>
+      <!--<mat-card-actions>-->
+      <!--  <button mat-button>LIKE</button>-->
+      <!--  <button mat-button>SHARE</button>-->
+      <!--</mat-card-actions>-->
+    </mat-card>
+  </div>
+
+</div>
+
+
+
