--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,15 +2,23 @@
 
   <div class="login-inner-container">
     <mat-card class="login-card">
-      <mat-card-header>
-        <!--<div style="align-items: center; padding-right: 50px">-->
-
-        <!--  <img class="header-image" src="assets/google.png">-->
-        <!--</div>-->
-        <!--<mat-card-title>Shiba Inu</mat-card-title>-->
-        <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-      </mat-card-header>
+      <img class="header-image" src="assets/google_map.png">
+      <div class="subtitle">
+        <span>Google Maps’e Hosgeldiniz.</span>
+      </div>
       <mat-card-content>
+        <form class="example-container">
+
+          <mat-form-field class="d-block">
+            <mat-label>Enter your password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+
+        </form>
 
       </mat-card-content>
       <!--<mat-card-actions>-->
