--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,32 @@
-<div class="login-container">
+<div class="centered">
 
-  <div class="login-inner-container">
-    <mat-card class="login-card">
-      <img class="header-image" src="assets/google_map.png">
-      <div class="subtitle">
-        <span>Google Maps’e Hosgeldiniz.</span>
-      </div>
-      <mat-card-content>
-        <form class="example-container">
+  <!--<div class="login-inner-container">-->
+  <mat-card class="login-card">
+    <img class="header-image" src="assets/img.png">
+    <div class="subtitle">
+      <span>Google Maps’e Hosgeldiniz.</span>
+    </div>
+    <mat-card-content>
+      <form class="example-container">
 
-          <mat-form-field class="d-block">
-            <mat-label>Enter your password</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                    [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
+        <!--<mat-form-field class="d-block">-->
+        <!--  <mat-label>Enter your password</mat-label>-->
+        <!--  <input matInput [type]="hide ? 'password' : 'text'">-->
+        <!--  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"-->
+        <!--          [attr.aria-pressed]="hide">-->
+        <!--    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>-->
+        <!--  </button>-->
+        <!--</mat-form-field>-->
 
-        </form>
+      </form>
 
-      </mat-card-content>
-      <!--<mat-card-actions>-->
-      <!--  <button mat-button>LIKE</button>-->
-      <!--  <button mat-button>SHARE</button>-->
-      <!--</mat-card-actions>-->
-    </mat-card>
-  </div>
+    </mat-card-content>
+    <!--<mat-card-actions>-->
+    <!--  <button mat-button>LIKE</button>-->
+    <!--  <button mat-button>SHARE</button>-->
+    <!--</mat-card-actions>-->
+  </mat-card>
+  <!--</div>-->
 
 </div>
 
