--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,7 @@
 .login-card {
   max-width: 450px;
-  padding-bottom: 23rem;
+  min-width: auto;
+  //padding-bottom: 23rem;
 }
 
 .header-image {
@@ -22,9 +23,31 @@
 }
 
 .centered {
-  position: fixed;
+  margin: auto;
+  position: absolute;
   top: 50%;
   left: 50%;
-  /* bring your own prefixes */
   transform: translate(-50%, -50%);
+}
+
+form.example-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+}
+
+.mat-form-field {
+  width: 70%;
+}
+
+.mat-raised-button {
+  min-width: 260px;
+}
+.missing-password {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  width: 70%;
+  text-align-last: right;
 }
