--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
         <label class="missing-password">Şifremi Unttum</label>
         <div>
 
-          <button mat-raised-button color="primary">
+          <button class="login-button" mat-raised-button color="primary">
             <span>Giriş Yap</span>
           </button>
         </div>
