--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -42,8 +42,8 @@ form.example-container {
   width: 70%;
 }
 
-.mat-raised-button {
-  min-width: 260px;
+.login-button {
+  min-width: 320px;
 }
 .missing-password {
   padding-bottom: 1rem;
