--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
     </div>
     <mat-card-content>
 
-      <form class="example-container">
+      <form class="form-container">
 
         <mat-form-field>
           <mat-label>Enter your password</mat-label>
