--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,17 +9,13 @@
       <form class="form-container">
 
         <mat-form-field>
-          <mat-label>Enter your password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                  [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
+          <mat-label>E-mail</mat-label>
+          <input matInput autocomplete="off">
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Enter your password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'">
+          <mat-label>Şifre</mat-label>
+          <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off">
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                   [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -27,20 +23,14 @@
         </mat-form-field>
 
         <label class="missing-password">Şifremi Unttum</label>
-        <div>
 
-          <button class="login-button" mat-raised-button color="primary">
-            <span>Giriş Yap</span>
-          </button>
-        </div>
+        <button class="login-button" mat-raised-button color="primary">
+          <span>Giriş Yap</span>
+        </button>
 
       </form>
 
     </mat-card-content>
-    <!--<mat-card-actions>-->
-    <!--  <button mat-button>LIKE</button>-->
-    <!--  <button mat-button>SHARE</button>-->
-    <!--</mat-card-actions>-->
   </mat-card>
 </div>
 
