--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -25,9 +25,11 @@
 
         <label class="missing-password">Şifremi Unttum</label>
 
-        <button class="login-button" mat-raised-button color="primary">
-          <span>Giriş Yap</span>
-        </button>
+        <div style="display: flex">
+          <button class="login-button" mat-raised-button color="primary">
+            <span>Giriş Yap</span>
+          </button>
+        </div>
 
       </form>
 
