--- a/src/app/login-operation/login/login.component.scss
+++ b/src/app/login-operation/login/login.component.scss
@@ -43,7 +43,7 @@
 }
 
 .login-button {
-  min-width: 320px;
+  width: 250px;
 }
 
 .missing-password {
@@ -59,6 +59,9 @@
       margin-right: 1rem;
     }
   }
+  mat-card-content.mat-card-content {
+    padding-top: 8rem;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -68,6 +71,9 @@
     mat-card:not(:last-child) {
       margin-bottom: 1rem;
     }
+  }
+  mat-card-content.mat-card-content {
+    padding-top: 8rem;
   }
 }
 
