--- a/src/app/login-operation/reset-password/reset-password.component.scss
+++ b/src/app/login-operation/reset-password/reset-password.component.scss
@@ -57,6 +57,12 @@
       margin-right: 1rem;
     }
   }
+  mat-card-content.mat-card-content {
+    padding-top: 8rem;
+  }
+  .subtitle {
+    padding-left: 1rem;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -66,6 +72,12 @@
     mat-card:not(:last-child) {
       margin-bottom: 1rem;
     }
+  }
+  mat-card-content.mat-card-content {
+    padding-top: 8rem;
+  }
+  .subtitle {
+    padding-left: 1rem;
   }
 }
 
