--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--<app-user></app-user>-->
 <body>
-  <app-login></app-login>
-<!--<app-reset-password></app-reset-password>-->
+  <!--<app-login></app-login>-->
+<app-reset-password></app-reset-password>
 </body>
 
