--- a/src/app/login-operation/reset-password/reset-password.component.scss
+++ b/src/app/login-operation/reset-password/reset-password.component.scss
@@ -57,12 +57,6 @@
       margin-right: 1rem;
     }
   }
-  mat-card-content.mat-card-content {
-    padding-top: 8rem;
-  }
-  .subtitle {
-    padding-left: 1rem;
-  }
 }
 
 @media screen and (max-width: 992px) {
@@ -78,6 +72,10 @@
   }
   .subtitle {
     padding-left: 1rem;
+  }
+  .mat-form-field {
+    width: 100%;
+    padding-top: 2rem;
   }
 }
 
