--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-user></app-user>
+<!--<app-user></app-user>-->
 <body>
   <app-login></app-login>
 <!--<app-reset-password></app-reset-password>-->
