--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -24,16 +24,16 @@
         </mat-form-field>
 
         <label class="missing-password">Şifremi Unttum</label>
-
-        <div style="display: flex">
-          <button class="login-button" mat-raised-button color="primary">
-            <span>Giriş Yap</span>
-          </button>
-        </div>
-
       </form>
 
+      <div class="login-button">
+        <button class="login-btn" type="button" mat-raised-button color="primary">
+          <span>Giriş Yap</span>
+        </button>
+      </div>
+
     </mat-card-content>
+
   </mat-card>
 
 </div>
