--- a/src/app/login-operation/reset-password/reset-password.component.scss
+++ b/src/app/login-operation/reset-password/reset-password.component.scss
@@ -77,5 +77,8 @@
     width: 100%;
     padding-top: 2rem;
   }
+  //mat-card.mat-card.mat-focus-indicator.login-card {
+  //  width: 325px;
+  //}
 }
 
