--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -17,7 +17,7 @@
         <mat-form-field>
           <mat-label>Şifre</mat-label>
           <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off">
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" type="button"
                   [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
