--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!--<app-user></app-user>-->
-<body>
-  <app-login></app-login>
-<!--<app-reset-password></app-reset-password>-->
-</body>
+<app-user-info></app-user-info>
+<!--<body>-->
+<!--&lt;!&ndash;<app-login></app-login>&ndash;&gt;-->
+<!--&lt;!&ndash;<app-reset-password></app-reset-password>&ndash;&gt;-->
+<!--</body>-->
 
