--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,6 +1,115 @@
-<mat-grid-list cols="5" rowHeight="100%">
-  <mat-grid-tile colspan="1" class="grid-tile-content">
-    <app-user-list></app-user-list>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="4">2</mat-grid-tile>
-</mat-grid-list>
+<header>
+  <mat-toolbar>
+    <mat-toolbar-row style="display: flex; justify-content: center">
+      <img src="../../assets/logo.png" style="width: 270px">
+
+    </mat-toolbar-row>
+  </mat-toolbar>
+</header>
+
+<div class="row">
+  <div class="col-md-3 col-sm-12" style="border: 1px solid #dedede">
+    <div class="user-list-div">
+      <span class="user-list-text">Kullanıcı Listesi</span>
+    </div>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="user-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-md-9 d-none d-md-block">
+    <div style="display: flex; justify-content: center; margin-top: 7rem">
+      <img src="assets/img_1.png" style="width: 50%">
+    </div>
+    <div style="display: flex; justify-content: center">
+      <span class="welcome-text">Google Maps’e Hoşgeldiniz</span>
+    </div>
+  </div>
+</div>
