--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="centered">
 
   <mat-card class="login-card">
-    <img class="header-image" src="../../../assets/img.png">
+    <img class="header-image" src="../../../assets/google-maps.png">
     <div class="subtitle">
       <span>Google Maps’e Hosgeldiniz.</span>
     </div>
