--- a/src/app/login-operation/reset-password/reset-password.component.html
+++ b/src/app/login-operation/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="centered">
 
   <mat-card class="login-card">
-    <img class="header-image" src="../../../assets/img.png">
+    <img class="header-image" src="../../../assets/google-maps.png">
     <div class="subtitle">
       <span>Şifrenizi sıfırlamak istediğiniz <br> E-Mail adresini girin.</span>
     </div>
