--- a/src/app/user-info/user-info.component.scss
+++ b/src/app/user-info/user-info.component.scss
@@ -1,16 +1,58 @@
-mat-grid-tile {
-  background: #dedede;
+.user-card {
+  width: 102%;
 }
-.grid-tile-content {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: absolute;
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+.welcome-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.user-list-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.user-list-div {
   display: flex;
-  /* align-items: center; */
-  justify-content: center;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-left: 1rem;
 }
+
+@media screen and (min-width: 992px) {
+  #wrapper {
+    mat-card:not(:last-child) {
+      margin-right: 1rem;
+    }
+
+    mat-card-content.mat-card-content {
+      padding-top: 8rem;
+    }
+  }
+
+}
+
+@media screen and (max-width: 992px) {
+  #wrapper {
+    flex-direction: column;
+
+    mat-card:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+
+}
+
