--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,8 +1,7 @@
 <header>
   <mat-toolbar>
-    <mat-toolbar-row style="display: flex; justify-content: center">
+    <mat-toolbar-row class="toolbar-row">
       <img src="../../assets/logo.png" style="width: 270px">
-
     </mat-toolbar-row>
   </mat-toolbar>
 </header>
