--- a/src/app/user-info/user-info.component.scss
+++ b/src/app/user-info/user-info.component.scss
@@ -32,27 +32,20 @@
   margin-left: 1rem;
 }
 
-@media screen and (min-width: 992px) {
-  #wrapper {
-    mat-card:not(:last-child) {
-      margin-right: 1rem;
-    }
+.toolbar-row {
+  display: flex;
+  justify-content: center
+}
 
-    mat-card-content.mat-card-content {
-      padding-top: 8rem;
-    }
-  }
+@media screen and (min-width: 992px) {
 
 }
 
 @media screen and (max-width: 992px) {
-  #wrapper {
-    flex-direction: column;
 
-    mat-card:not(:last-child) {
-      margin-bottom: 1rem;
-    }
+  .toolbar-row {
+    display: flex;
+    justify-content: flex-start;
   }
-
 }
 
