--- a/src/app/login-operation/reset-password/reset-password.component.html
+++ b/src/app/login-operation/reset-password/reset-password.component.html
@@ -20,11 +20,7 @@
           </button>
         </div>
 
-        <div class="back-login">
-          <label>Şifremi Unttum</label>
-        </div>
-
-
+        <a class="back-login" routerLink="/login">Şifremi Unttum</a>
       </form>
 
     </mat-card-content>
