--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -7,7 +7,7 @@
 </header>
 
 <div class="row">
-  <div class="col-md-3 col-sm-12" style="border: 1px solid #dedede">
+  <div class="col-md-3 col-sm-12">
     <div class="user-list-div">
       <span class="user-list-text">Kullanıcı Listesi</span>
     </div>
