--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="centered" *ngIf="hideLogin" (close)="$event">
+<div class="centered" *ngIf="hideLogin">
   <mat-card class="login-card">
     <img class="header-image" src="../../../assets/google-maps.png">
     <div class="subtitle">
