--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!--<app-user-info></app-user-info>-->
 <body>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
-<app-login></app-login>
-<!--<app-reset-password></app-reset-password>-->
+  <!--<app-login></app-login>-->
+  <!--<app-reset-password></app-reset-password>-->
 </body>
 
