--- a/src/app/login-operation/reset-password/reset-password.component.html
+++ b/src/app/login-operation/reset-password/reset-password.component.html
@@ -1,4 +1,5 @@
-<div class="centered">
+<body class="page-body">
+  <div class="centered">
 
   <mat-card class="login-card">
     <img class="header-image" src="../../../assets/google-maps.png">
@@ -15,7 +16,7 @@
         </mat-form-field>
 
         <div style="padding-top: 1rem">
-          <button class="reset-button" mat-raised-button color="primary">
+          <button class="reset-button" mat-raised-button color="primary" type="button">
             <span>Şifremi Sıfırla</span>
           </button>
         </div>
@@ -27,6 +28,7 @@
   </mat-card>
 
 </div>
+</body>
 
 
 
