--- a/src/app/user-info/user-info.component.scss
+++ b/src/app/user-info/user-info.component.scss
@@ -28,6 +28,24 @@
   justify-content: center
 }
 
+.load-more {
+  position: absolute;
+  width: 316.36px;
+  height: 21px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #3988FF;
+
+}
+
 @media screen and (min-width: 992px) {
 
 }
