--- a/src/app/login-operation/login/login.component.scss
+++ b/src/app/login-operation/login/login.component.scss
@@ -1,3 +1,7 @@
+.page-body {
+  background-color: #F2F2F2
+}
+
 .login-card {
   max-width: 450px;
   min-width: auto;
@@ -109,6 +113,10 @@
   }
   mat-card.mat-card.mat-focus-indicator.login-card {
     width: 325px;
+  }
+
+  .page-body {
+    background-color: #FFFFFF;
   }
 }
 
