--- a/src/app/login-operation/reset-password/reset-password.component.scss
+++ b/src/app/login-operation/reset-password/reset-password.component.scss
@@ -1,3 +1,7 @@
+.page-body {
+  background-color: #F2F2F2
+}
+
 .login-card {
   max-width: 450px;
   min-width: auto;
@@ -76,6 +80,9 @@
   .mat-form-field {
     width: 100%;
     padding-top: 2rem;
+  }
+  .page-body {
+    background-color: #FFFFFF;
   }
 }
 
