--- a/src/app/login-operation/reset-password/reset-password.component.html
+++ b/src/app/login-operation/reset-password/reset-password.component.html
@@ -21,7 +21,7 @@
           </button>
         </div>
 
-        <a class="back-login" routerLink="/login">Şifremi Unttum</a>
+        <a class="back-login" routerLink="/login">veya Giriş Yapın</a>
       </form>
 
     </mat-card-content>
