--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -3,6 +3,7 @@
 <div class="row alert-danger-div" *ngIf="loginAlert">
   <div class="alert alert-danger col-3 alert-danger" role="alert">
     <strong>Giriş işlemi başarısız oldu! </strong> Lütfen kullanıcı bilgilerinizi kontrol edip tekrar deneyin.
+    <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
   </div>
 </div>
 
