--- a/src/app/user-info/user-info.component.scss
+++ b/src/app/user-info/user-info.component.scss
@@ -28,7 +28,7 @@
   justify-content: center
 }
 
-.load-more {
+.load-more-and-less {
   position: absolute;
   width: 316.36px;
   height: 21px;
@@ -39,6 +39,7 @@
   line-height: 21px;
   text-align: center;
   color: #3988FF;
+  margin-bottom: 2rem;
 }
 
 .scroll {
