--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -1,7 +1,7 @@
 <body class="page-body">
 
 <div class="row alert-danger-div" *ngIf="loginAlert">
-  <div class="alert alert-danger col-md-3 col-sm-12" role="alert">
+  <div class="alert alert-danger col-md-3 col-sm-12  d-none d-md-block" role="alert">
     <strong>Giriş işlemi başarısız oldu! </strong> Lütfen kullanıcı bilgilerinizi kontrol edip tekrar deneyin.
     <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
   </div>
