--- a/src/app/user-info/user-detail/user-detail.component.html
+++ b/src/app/user-info/user-detail/user-detail.component.html
@@ -1,1 +1,13 @@
-<p>user-detail works!</p>
+<div style="display: flex; justify-content: center; margin-top: 7rem">
+  <img src="assets/img_1.png" style="width: 50%">
+</div>
+<div style="display: flex; justify-content: center">
+  <span class="welcome-text">Google Maps’e Hoşgeldiniz</span>
+</div>
+
+<!--User title with full name can show in detail page-->
+<!--<div style="display: flex; justify-content: center">-->
+<!--  <span *ngIf="userId" class="welcome-text">-->
+<!--      {{userTitle ? userTitle : ''}}. {{userName ? userName : ''}}-->
+<!--  </span>-->
+<!--</div>-->
