--- a/src/app/user-info/user-list/user-list.component.html
+++ b/src/app/user-info/user-list/user-list.component.html
@@ -5,6 +5,9 @@
     </div>
     <mat-card-title>
       <span style="color: #3988FF">{{title}}.{{firstName ? firstName : ''}}  {{lastName ? lastName : ''}}</span>
+      <!--If we want to show full name of user in detail component open code line(9-10) close line 7 -->
+      <!--<a href="javascript: void(0)" (click)="selectUser.emit()" style="color: #3988FF">{{title}}-->
+      <!--  .{{firstName ? firstName : ''}}  {{lastName ? lastName : ''}}</a>-->
     </mat-card-title>
     <mat-card-subtitle>Email: {{userDetail?.email}} </mat-card-subtitle>
     <mat-card-subtitle>Phone: {{userDetail?.phone}} </mat-card-subtitle>
