--- a/src/app/login-operation/login/login.component.scss
+++ b/src/app/login-operation/login/login.component.scss
@@ -90,6 +90,9 @@
   .subtitle {
     padding-left: 25px;
   }
+  .alert-danger-mobil {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 992px) {
