--- a/src/app/login-operation/login/login.component.html
+++ b/src/app/login-operation/login/login.component.html
@@ -15,6 +15,13 @@
     </div>
     <mat-card-content>
 
+      <div class="row alert-danger-mobil" *ngIf="loginAlert">
+        <div class="alert alert-danger col-sm-12" role="alert">
+          <strong>Giriş işlemi başarısız oldu! </strong> Lütfen kullanıcı bilgilerinizi kontrol edip tekrar deneyin.
+          <mat-progress-bar mode="query" color="warn"></mat-progress-bar>
+        </div>
+      </div>
+
       <form class="form-container" [formGroup]="loginForm">
 
         <mat-form-field>
